@startuml Builder
'skinparam linetype ortho
'skinparam linetype polyline

class Director.XMLTokenizer {
	+construct(...)
}

abstract class Builder.XMLBuilder {
	+{abstract}BuildDocument()
	+{abstract}BuildElement(string)
	+{abstract}BuildAttribute(string, string)
	+{abstract}BuildText(string)
	+GetDOM()
	+popProbe()
}

class ConcreteBuilder.NodeXMLBuilder {
	#Document_Impl* _currentDOM
	+BuildDocument()
	+BuildElement(string)
	+BuildAttribute(string, string)
	+BuildText(string)
	+GetDOM()
	+popProbe()
}

class ConcreteBuilder.MinimalNodeXMLBuilder {
	+BuildDocument()
}

class ConcreteBuilder.PrettyNodeXMLBuilder {
	+BuildDocument()
}

abstract class Product.DOM {
	+serializeDOM(...)
}

abstract class Product.Document_Impl {
	+createElement(...)
	+createTextNode(...)
	+createAttribute(...)
	+serializeDOM(...)
}

class Product.PrettyDocument_Impl {
	+createElement(...)
	+createTextNode(...)
	+createAttribute(...)
}

class Client.Test {
}

Director.XMLTokenizer o-right-> Builder.XMLBuilder
Builder.XMLBuilder <|-down- ConcreteBuilder.NodeXMLBuilder
ConcreteBuilder.NodeXMLBuilder <|-left- ConcreteBuilder.MinimalNodeXMLBuilder
ConcreteBuilder.NodeXMLBuilder <|-right- ConcreteBuilder.PrettyNodeXMLBuilder
Product.DOM <|- Product.Document_Impl
Product.Document_Impl <|- Product.PrettyDocument_Impl
ConcreteBuilder.MinimalNodeXMLBuilder ..> Product.Document_Impl
ConcreteBuilder.PrettyNodeXMLBuilder ..> Product.PrettyDocument_Impl
Client.Test ..> Director.XMLTokenizer
Client.Test ..> Builder.XMLBuilder

@enduml